[project]
name = "curly-carnival"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "ng-23", email = "23grattan@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
curly-carnival = { path = ".", editable = true }
kaleido = "<=0.2.1.post1"
torcheval = ">=0.0.7"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.3,<2.2"
optuna = ">=4.1.0,<4.2"
pandas = ">=2.2.3,<2.3"
scikit-learn = ">=1.5.2,<1.6"
matplotlib = ">=3.9.3,<3.10"
plotly = ">=5.24.1,<5.25"
marshmallow = ">=3.23.1,<3.24"
pytorch = ">=2.5.1,<2.6"
torchvision = ">=0.20.1,<0.21"
tqdm = ">=4.67.1,<4.68"

[tool.pixi.system-requirements]
cuda = "12.2"
